# bgp-defender

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  ripe-query.py  test_initial_data2.txt
bgp-defender/: parser.py  regex.py  ripe-query.py
bgp_defender/: prefixes.py
bgp_defender/app/: __init__.py  hijack.py  prefix_checker.py  query.py
bgp_defender/parser/: bgp_parser.py  bgp_parser_cisco.py  cisco-table.txt  db_parser.py  ripe_parser.py
bgp_defender/query/: db_connector.py  ripe.py  whois.py
bgp_defender/sot/: device_connector.py  file_connector.py  whois.py
bgp_defender/sot/parser/: bgp_parser_junos.py
data/: Regex-querys  test_initial_data.txt
tests/: __init__.py  pytest.ini
